# sokora

./: .env.sample  .gitignore  .prettierrc  AGENTS.md  Dockerfile  Dockerfile.proxy  Makefile  README.md  docker-compose.yml  pyproject.toml  work_entries.csv
app/: Dockerfile  __init__.py  csv_store.py  main.py  pyproject.toml
app/api/: __init__.py
app/api/pages/: __init__.py  attendance.py  calendar.py  csv.py  group.py  location.py  main.py  user.py  user_type.py
app/api/v1/: __init__.py  attendance.py  calendar.py  csv.py  group.py  location.py  pages.py  root.py  user.py  user_type.py
app/core/: __init__.py  config.py
app/crud/: __init__.py  attendance.py  base.py  calendar.py  custom_holiday.py  group.py  location.py  user.py  user_type.py
app/data_seeder/: data_seeder.py  run_seeder.sh
app/db/: __init__.py  base.py  base_class.py  session.py
app/middleware/: auth.py
app/models/: __init__.py  attendance.py  custom_holiday.py  group.py  location.py  user.py  user_type.py
app/routers/pages/: __init__.py  analysis.py  attendance.py  auth.py  calendar.py  csv.py  group.py  holiday.py  location.py  main.py  register.py  top.py  user.py  user_type.py
app/schemas/: __init__.py  attendance.py  custom_holiday.py  group.py  location.py  user.py  user_type.py
app/services/: custom_holiday_service.py  group_service.py  location_service.py  user_service.py  user_type_service.py
app/services/auth/: dependencies.py  oidc.py  settings.py  state.py
app/src/: __init__.py  csv_store.py  main.py
app/src/core/: __init__.py
app/src/crud/: __init__.py  attendance.py  calendar.py  location.py  user.py
app/src/db/: __init__.py  base_class.py  session.py
app/src/models/: __init__.py  location.py  user.py
app/src/routes/: __init__.py  attendance.py  calendar.py  csv.py  root.py
app/src/schemas/: __init__.py  user.py
app/src/services/: __init__.py  csv_store.py  db_init.py  db_service.py
app/src/templates/: attendance.html  attendance_edit.html  base.html
app/src/utils/: __init__.py  calendar_utils.py  common.py  (+3 more)
app/static/: circle-favicon.css
app/templates/: README.md  attendance.html  attendance_edit.html  base.html  csv_download.html  employee.html  group.html  location.html  location_manage.html  user.html  user_type.html
app/tests/: conftest.py  test_main.py
app/utils/: __init__.py  calendar_utils.py  csv_utils.py  date_utils.py  holiday_cache.py  ui_utils.py
(+233 files in other folders)
