[tool.poetry]
name = "sokora"
version = "0.1.0"
description = "A minimal FastAPI app with Poetry"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.95.0"
uvicorn = "0.21.1"
jinja2 = "3.1.2"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
